// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handler.js function 1`] = `
"// This file is autogenerated to retain the scope the JS is defined in.
module.exports = require('./path/to/conartist.js')['testfile'].data();
"
`;

exports[`handler.js object 1`] = `
"// This file is autogenerated to retain the scope the JS is defined in.
module.exports = require('./path/to/conartist.js')['testfile'].data;
"
`;
